--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             text-align: center;
             font-family: 'Courier New', Courier, monospace;
             font-size: 2em;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+            color: #00bfff; /* Light blue color */
+            -webkit-text-stroke: 2px black; /* Black stroke around the text with 2px thickness */
+            font-weight: bold; /* Set the font weight to bold */
         }
     </style>
 </head>
