--- a/index.html
+++ b/index.html
@@ -27,16 +27,12 @@
         }
 
         #content {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 2em;
-            color: #00bfff; /* Light blue color */
-            -webkit-text-stroke: 2px black; /* Black stroke around the text with 2px thickness */
-            font-weight: bold; /* Set the font weight to bold */
+        font-family: 'Arial', sans-serif; /* Change to Arial font */
+        font-size: 4em;
+        color: #00bfff; /* Light blue color */
+        -webkit-text-stroke: 2px black; /* Black stroke around the text with 2px thickness */
+    }
+</style>
         }
     </style>
 </head>
