--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
         }
 
         #content {
-        font-family: 'Arial', sans-serif; /* Change to Arial font */
-        font-size: 4em;
-        color: #00bfff; /* Light blue color */
-        -webkit-text-stroke: 2px black; /* Black stroke around the text with 2px thickness */
-    }
-</style>
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            font-family: 'Arial', sans-serif;
+            font-size: 3em; /* Change to the desired font size */
+            color: #00bfff;
+            -webkit-text-stroke: 2px black;
+            font-weight: bold; /* Ensure boldness */
         }
     </style>
 </head>
@@ -46,3 +50,4 @@
     </div>
 </body>
 </html>
+
