--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             text-align: center;
             font-family: 'Arial', sans-serif;
             font-size: 3em; /* Change to the desired font size */
-            color: #00bfff;
+            color: #FFFFFF;
             font-weight: bold; /* Ensure boldness */
         }
     </style>
