--- a/index.html
+++ b/index.html
@@ -126,10 +126,39 @@
             z-index: 5;
         }
 
-        audio {
+        .login-box {
             position: absolute;
-            bottom: 10px;
-            left: 10px;
+            bottom: 20%;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border: 2px solid #00ff00;
+            box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
+            text-align: center;
+        }
+
+        .login-box input {
+            width: 200px;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: 2px solid #00ff00;
+            background: black;
+            color: #00ff00;
+            font-family: "Courier New", Courier, monospace;
+        }
+
+        .login-box button {
+            padding: 10px 20px;
+            border: none;
+            background: #00ff00;
+            color: black;
+            font-weight: bold;
+            cursor: pointer;
+            font-family: "Courier New", Courier, monospace;
+        }
+
+        .login-box button:hover {
+            background: #003300;
+            color: #00ff00;
         }
     </style>
 </head>
@@ -137,5 +166,13 @@
     <div class="neon-border"></div>
     <div class="glitch">Hack the Planet</div>
     <div class="scanlines"></div>
+
+    <div class="login-box">
+        <form onsubmit="event.preventDefault(); window.location.href='https://nazimuskfuckoff.com';">
+            <input type="text" placeholder="Username" required><br>
+            <input type="password" placeholder="Password" required><br>
+            <button type="submit">Log In</button>
+        </form>
+    </div>
 </body>
 </html>
