--- a/index.html
+++ b/index.html
@@ -6,176 +6,81 @@
     <title>Hack the Planet</title>
     <style>
         body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #001f00, #003300, #001f00);
-            background-size: 400% 400%;
-            animation: background-animation 10s infinite;
-            color: #00ff00;
-            font-family: "Courier New", Courier, monospace;
-            overflow: hidden;
-        }
-
-        @keyframes background-animation {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        .glitch {
-            font-size: 4rem;
-            font-weight: bold;
-            position: relative;
-            text-transform: uppercase;
-            animation: glitch-animation 2s infinite;
-            z-index: 2;
-        }
-
-        .glitch::before,
-        .glitch::after {
-            content: "Hack the Planet";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            color: #00ff00;
-            overflow: hidden;
-            clip: rect(0, 900px, 0, 0);
-            animation: glitch-animation 2s infinite;
-        }
-
-        .glitch::before {
-            left: 2px;
-            text-shadow: -2px 0 red;
-        }
-
-        .glitch::after {
-            left: -2px;
-            text-shadow: -2px 0 blue;
-        }
-
-        @keyframes glitch-animation {
-            0% {
-                clip: rect(0, 900px, 0, 0);
-            }
-            10% {
-                clip: rect(0, 900px, 30px, 0);
-            }
-            20% {
-                clip: rect(0, 900px, 10px, 0);
-            }
-            30% {
-                clip: rect(0, 900px, 60px, 0);
-            }
-            40% {
-                clip: rect(0, 900px, 20px, 0);
-            }
-            50% {
-                clip: rect(0, 900px, 50px, 0);
-            }
-            60% {
-                clip: rect(0, 900px, 10px, 0);
-            }
-            70% {
-                clip: rect(0, 900px, 30px, 0);
-            }
-            80% {
-                clip: rect(0, 900px, 40px, 0);
-            }
-            90% {
-                clip: rect(0, 900px, 5px, 0);
-            }
-            100% {
-                clip: rect(0, 900px, 0, 0);
-            }
-        }
-
-        .scanlines {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: repeating-linear-gradient(
-                transparent 0px,
-                transparent 3px,
-                rgba(0, 255, 0, 0.1) 3px,
-                rgba(0, 255, 0, 0.1) 4px
-            );
-            pointer-events: none;
-            z-index: 10;
-        }
-
-        .neon-border {
-            position: absolute;
-            top: 10%;
-            left: 10%;
-            width: 80%;
-            height: 80%;
-            border: 2px solid #00ff00;
-            box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
-            z-index: 1;
-        }
-
-        .login-box {
-            position: absolute;
-            bottom: 20%;
-            background: rgba(0, 0, 0, 0.8);
-            padding: 20px;
-            border: 2px solid #00ff00;
-            box-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
+            background-color: #000;
+            color: #0f0;
+            font-family: 'Courier New', Courier, monospace;
             text-align: center;
-            z-index: 2;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
         }
-
-        .login-box input {
-            width: 200px;
+        h1 {
+            font-size: 4rem;
+            text-shadow: 0 0 10px #0f0, 0 0 20px #0f0;
+            animation: glow 1.5s infinite alternate;
+        }
+        @keyframes glow {
+            from { text-shadow: 0 0 10px #0f0, 0 0 20px #0f0; }
+            to { text-shadow: 0 0 20px #0f0, 0 0 40px #0f0; }
+        }
+        .login-form {
+            margin-top: 20px;
+        }
+        input[type="text"], input[type="password"] {
+            background-color: #111;
+            border: 2px solid #0f0;
+            color: #0f0;
             padding: 10px;
-            margin-bottom: 10px;
-            border: 2px solid #00ff00;
-            background: black;
-            color: #00ff00;
-            font-family: "Courier New", Courier, monospace;
+            margin: 5px;
+            font-family: 'Courier New', Courier, monospace;
         }
-
-        .login-box button {
-            padding: 10px 20px;
+        input[type="submit"] {
+            background-color: #0f0;
             border: none;
-            background: #00ff00;
-            color: black;
-            font-weight: bold;
+            color: #000;
+            padding: 10px 20px;
             cursor: pointer;
-            font-family: "Courier New", Courier, monospace;
+            font-family: 'Courier New', Courier, monospace;
+            font-weight: bold;
         }
-
-        .login-box button:hover {
-            background: #003300;
-            color: #00ff00;
+        input[type="submit"]:hover {
+            background-color: #0c0;
+        }
+        .gif-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+        }
+        .gif-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            opacity: 0.3;
         }
     </style>
 </head>
 <body>
-    <div class="neon-border"></div>
-    <div class="glitch">Hack the Planet</div>
-    <div class="scanlines"></div>
-
-    <div class="login-box">
-        <form onsubmit="event.preventDefault(); window.location.href='https://nazimuskfuckoff.com';">
+    <div class="gif-container">
+        <img src="https://i.gifer.com/7VE.gif" alt="Retro Cyberpunk GIF">
+    </div>
+    <h1>Hack the Planet</h1>
+    <div class="login-form">
+        <form onsubmit="redirectToSite(event)">
             <input type="text" placeholder="Username" required><br>
             <input type="password" placeholder="Password" required><br>
-            <button type="submit">Log In</button>
+            <input type="submit" value="Login">
         </form>
     </div>
+
+    <script>
+        function redirectToSite(event) {
+            event.preventDefault(); // Prevent form submission
+            window.location.href = "https://nazimuskfuckoff.com"; // Redirect to the specified site
+        }
+    </script>
 </body>
 </html>
-
